# orbit

./: .gitignore
orbitd/: .rustfmt.toml  Cargo.toml  DATABASE_PERSISTENCE_COMPLETE.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION_2025-11-06.md  SECURITY_TESTS_SUMMARY.md  rustfmt.toml
orbitd/benches/: ipc_benchmark.rs  performance.rs  provider_benchmarks.rs
orbitd/launchd/: com.singulio.orbitd.plist
orbitd/migrations/: 002_learning_system.sql  003_cost_tracking.sql
orbitd/src/: config.rs  credentials.rs  lib.rs  main.rs
orbitd/src/autostart/: launchd.rs  mod.rs  systemd.rs  windows_service.rs
orbitd/src/cache/: mod.rs
orbitd/src/classifier/: mod.rs
orbitd/src/context/: mod.rs
orbitd/src/daemon/: ipc.rs  ipc_common.rs  ipc_unix.rs  ipc_windows.rs  mod.rs  server.rs
orbitd/src/embeddings/: mod.rs
orbitd/src/executor/: mod.rs
orbitd/src/learning/: analytics.rs  mod.rs  patterns.rs  preferences.rs  types.rs
orbitd/src/license/: mod.rs
orbitd/src/monitor/: git.rs  mod.rs
orbitd/src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  server.rs
orbitd/src/optimization/: async_ops.rs  database.rs  mod.rs  resources.rs
orbitd/src/prompts/: mod.rs
orbitd/src/providers/: cost_tracker.rs  mod.rs
orbitd/src/security/: audit.rs  encryption.rs  mod.rs  sandbox.rs
orbitd/src/service/: mod.rs  windows_service.rs
orbitd/src/session/: database.rs  mod.rs  types.rs
orbitd/systemd/: orbitd.service
orbitd/tests/: integration.rs  ipc_cross_platform_test.rs
orbitd/tests/common/: mod.rs
orbitd/tests/integration/: e2e_test.rs  mod.rs
orbitd/tests/unit/: classifier_test.rs  context_test.rs  learning_test.rs  mod.rs  providers_test.rs
pulsar/: ADVANCED_PROTOCOLS_PLAN.md  ARTIFACT_REGISTRATION_COMPLETE.md  COMMAND_HISTORY_IMPLEMENTATION_COMPLETE.md  COMPLETE_FEATURE_ROADMAP.md  CONNECTION_UI_COMPLETE.md  COVERAGE_REPORT.md  Cargo.toml  DATABASE_UPDATE_COMPLETE.md  DESKTOP_DAEMON_INTEGRATION_COMPLETE.md  DESKTOP_INTEGRATION_COMPLETE.md  ERROR_HANDLING_IMPLEMENTATION.md  FILE_TRANSFER_IMPLEMENTATION_STATUS.md  FILE_TRANSFER_PROTOCOL.md  FILE_TRANSFER_UI_COMPLETE.md  FINGERPRINT_DISPLAY_COMPLETE.md  FRONTEND_TERMINAL_COMPONENT.md  FRONTEND_WIRING_COMPLETE.md  GRPC_PHASE_A_COMPLETE.md  HOST_KEY_VERIFICATION_COMPLETE.md  IMMEDIATE_COMPLETE.md  LOADING_STATES_IMPLEMENTATION.md  MULTI_SESSION_ARCHITECTURE.md  MULTI_SESSION_IMPLEMENTATION_COMPLETE.md  MVP_COMPLETION_PLAN.md  NEXT_PHASE_PLAN.md  NOTIFICATIONS_COMPLETE.md  PHASE4_COMPLETE_SUMMARY.md  PTY_IO_IMPLEMENTATION_COMPLETE.md  PULSAR_OVERALL_STATUS_NOVEMBER_2025.md  QUICK_START.md  QUICK_START_ARTIFACTS.md  README.md  REAL_SSH_IMPLEMENTATION_COMPLETE.md  ROADMAP_STATUS_UPDATE.md  SECTION_A_C_IMPLEMENTATION_PLAN.md  SESSION_COMPLETE_2025-11-04.md  SESSION_MANAGEMENT_COMPLETE.md  SESSION_REPLAY_IMPLEMENTATION_COMPLETE.md  SESSION_SUMMARY_2025-10-31.md  SESSION_SUMMARY_2025-11-01.md  (+31 more)
pulsar/proto/: terminal.proto
pulsar/pulsar-daemon/: Cargo.toml  build.rs
pulsar/pulsar-daemon/migrations/: 003_workspaces.sql
pulsar/pulsar-daemon/src/: config.rs  grpc.rs  ipc.rs  main.rs  protocol.rs  session_manager.rs  websocket.rs  webtransport.rs
pulsar/pulsar-daemon/src/file_transfer/: handler.rs  messages.rs  mod.rs  storage.rs  validation.rs
pulsar/pulsar-daemon/src/workspace/: mod.rs  models.rs  service.rs
pulsar/pulsar-desktop/: BETA_PROGRAM_COMPLETE.md  BETA_PROGRAM_PLAN.md  BETA_RELEASE_CHECKLIST.md  COMMAND_PALETTE_IMPLEMENTATION.md  CROSS_PLATFORM_PERFORMANCE_COMPLETE.md  CROSS_PLATFORM_PERFORMANCE_PLAN.md  E2E_TESTING_COMPLETE.md  JSDOC_DOCUMENTATION_COMPLETE.md  KEYBOARD_NAVIGATION_IMPLEMENTATION.md  PULSAR_MVP_COMPLETE_STATUS.md  SESSION_RESTORATION_IMPLEMENTATION.md  TESTING_IMPROVEMENTS_SUMMARY.md  TRACK4_POWER_USER_FEATURES_COMPLETE.md  index.html  package-lock.json  package.json  playwright.config.ts  run-dev.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
pulsar/pulsar-desktop/.github/workflows/: cross-platform-build.yml  e2e-tests.yml
pulsar/pulsar-desktop/e2e/: README.md  app.spec.ts  connection.spec.ts  file-transfer.spec.ts  keyboard.spec.ts  sessions.spec.ts  settings.spec.ts  vault.spec.ts
pulsar/pulsar-desktop/scripts/: benchmark.ts
pulsar/pulsar-desktop/src/: App-Updated.tsx  App.css  App.tsx  animations.css  index.css  vite-env.d.ts
pulsar/pulsar-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pulsar/pulsar-desktop/src-tauri/src/: autostart_commands.rs  commands.rs  daemon_client.rs  daemon_commands.rs  main.rs  notification_commands.rs  settings_commands.rs  ssh_manager.rs  state.rs  vault_commands.rs
pulsar/pulsar-desktop/src/components/: CommandHistory.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConnectionDialog.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorAlert.test.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  FeedbackDialog.tsx  FileTransferView.tsx  FileUploadZone.tsx  HistorySearch.tsx  InlineLoader.tsx  KeyboardShortcutsDialog.test.tsx  KeyboardShortcutsDialog.tsx  LoadingOverlay.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  MainContent.tsx  MainContentMultiSession.tsx  MainContentMultiSessionSplitPane.tsx  PaneContainer.tsx  PulsarTerminal.tsx  Resizer.tsx  ResumeDialog.tsx  SessionConfigDialog.tsx  SessionPlayer.tsx  SessionRestoreDialog.tsx  SessionRestoreNotification.test.tsx  SessionRestoreNotification.tsx  SessionTabs.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarNew.tsx  SplitPane.tsx  TemplateGallery.tsx  Terminal.tsx  Toast.test.tsx  Toast.tsx  (+13 more)
pulsar/pulsar-desktop/src/hooks/: useArrowNavigation.test.ts  useArrowNavigation.ts  useCommandPalette.test.ts  useCommandPalette.ts  (+4 more)
pulsar/terminal-core/: Cargo.toml
pulsar/terminal-core/src/: lib.rs  parser.rs  pty.rs  session.rs
pulsar/terminal-wasm/: Cargo.toml  demo.html
pulsar/terminal-wasm/src/: buffer.rs  lib.rs  parser.rs
pulsar/tft-core/: Cargo.toml
pulsar/tft-core/src/: chunking.rs  crypto.rs  lib.rs  merkle.rs  protocol.rs
pulsar/tft-transports/: Cargo.toml
pulsar/tft-transports/src/: known_hosts.rs  lib.rs  quic.rs  ssh.rs  ssh_client.rs  ssh_simple.rs  transport.rs
(+56 files in other folders)
