[workspace]
members = [
    "tft-core",
    "tft-transports",
    "terminal-core",
    "pulsar-daemon",
    "pulsar-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Singulio Platform Team"]
license = "Proprietary"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Crypto
blake3 = "1.5"
chacha20poly1305 = "0.10"
ring = "0.17"
rustls = "0.23"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
quinn = "0.11"
h3 = "0.0.8"
russh = "0.54"
russh-sftp = "2.1"

# Terminal
portable-pty = "0.8"
vte = "0.13"

# System
dirs = "5.0"
