[package]
name = "terminal-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
license = "MIT"

[workspace]
# This is a standalone WASM package

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Terminal parsing
vte = "0.13"

# SSH crypto (future)
# ssh-key = { version = "0.6", features = ["crypto", "ed25519"] }

# Utilities
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
