[package]
name = "tft-transports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local dependencies
tft-core = { path = "../tft-core" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Crypto
ring = { workspace = true }
rustls = { workspace = true }

# Networking
quinn = { workspace = true }
h3 = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }

# Utilities
bytes = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

# WebRTC (for future implementation)
webrtc = { version = "0.11", optional = true }

[features]
default = ["quic", "ssh"]
quic = []
ssh = []
webrtc = ["dep:webrtc"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
